# ec_tech_assessment

./: .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
package/scripts/: generate_embeddings.py  launch_neo4j.py  load_data.py  train_xgb.py
