[build-system]
requires = [ "setuptools>=61",]
build-backend = "setuptools.build_meta"

[project]
name = "ec_tech_assessment"
version = "0.1"
requires-python = ">=3.10"
dependencies = [ "neo4j", "scikit-learn", "xgboost",]
dynamic = []

[project.urls]
Homepage = "https://github.com/JBwdn/ec_tech_assesment"

[project.scripts]
launch_n4j = "package.scripts.launch_neo4j:main"
load_data = "package.scripts.load_data:main"
generate_embeddings = "package.scripts.generate_embeddings:main"
train_xgb = "package.scripts.train_xgb:main"

[project.optional-dependencies]
dev = [ "black", "isort", "pre-commit", "pylint", "pyright", "pytest",]
test = [ "pytest",]

[tool.pylint]
max-line-length = 100
disable = "import-error"

[tool.pyright]
reportMissingImports = false
pythonVersion = "3.12"

[tool.black]
target-version = [ "py312",]
line-length = 100

[tool.isort]
profile = "black"
filter_files = true

[tool.setuptools.packages.find]
